--- a/local.properties
+++ b/local.properties
@@ -1,3 +1,5 @@
-flutter.buildMode=release
-flutter.versionName=1.0.0
-flutter.versionCode=1
+// Define which modules should be included in the project
+include ':app', ':vpnLib'
+
+// Apply the Flutter plugin
+apply from: "$flutterRoot/packages/flutter_tools/gradle/app_plugin_loader.gradle"
