--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,15 +27,17 @@ jobs:
       - name: Set up Flutter SDK
         run: |
           git clone https://github.com/flutter/flutter.git
-          export PATH="$PATH:`pwd`/flutter/bin"
+          export PATH="$PATH:${{ github.workspace }}/flutter/bin"
           flutter config --no-analytics
           flutter doctor
         working-directory: ${{ github.workspace }}
+        env:
+          FLUTTER_HOME: ${{ github.workspace }}/flutter
 
       - name: Build APK
         run: |
-          chmod +x $GITHUB_WORKSPACE/gradlew
-          $GITHUB_WORKSPACE/gradlew assembleDebug
+          chmod +x ${{ github.workspace }}/gradlew
+          ${{ github.workspace }}/gradlew assembleDebug
         working-directory: ${{ github.workspace }}
 
       - name: Upload APK
