--- a/local.properties
+++ b/local.properties
@@ -1,5 +1,5 @@
 // Define which modules should be included in the project
 include ':app', ':vpnLib'
-
+flutter.sdk=/home/runner/work/Kaizen/flutter
 // Apply the Flutter plugin
 apply from: "$flutterRoot/packages/flutter_tools/gradle/app_plugin_loader.gradle"
