--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,8 @@ jobs:
           export PATH="$PATH:${{ github.workspace }}/flutter/bin"
           flutter config --no-analytics
           flutter doctor
+          flutter doctor -v
+          flutter doctor
         working-directory: ${{ github.workspace }}
         env:
           FLUTTER_HOME: ${{ github.workspace }}/flutter
