--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,12 +26,8 @@ jobs:
 
       - name: Set up Flutter SDK
         run: |
-          git clone https://github.com/flutter/flutter.git
-          export PATH="$PATH:${{ github.workspace }}/flutter/bin"
-          flutter config --no-analytics
-          flutter doctor -v  # Check Flutter configuration
-          flutter doctor
-          flutter pub get  # Fetch project dependencies
+          chmod +x install_flutter.sh
+          ./install_flutter.sh
         working-directory: ${{ github.workspace }}
         env:
           FLUTTER_HOME: ${{ github.workspace }}/flutter
