--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Set up Flutter SDK
         run: |
-          ${{ github.workspace }}/chmod +x install_flutter.sh
+          chmod +x ${{ github.workspace }}/install_flutter.sh
           ${{ github.workspace }}/./install_flutter.sh
         working-directory: ${{ github.workspace }}
         env:
