--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,26 +21,23 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
-          distribution: 'adopt' # Adjust this to your project's Java version
+          java-version: 11
 
-      - name: Set up Flutter SDK
+      - name: Set up Flutter
         run: |
-          pwd
-          chmod +x $HOME/install_flutter.sh
-          $HOME//install_flutter.sh
+          curl -o flutter_install.sh https://raw.githubusercontent.com/flutter/flutter/master/packages/flutter_tools/bin/flutter_install.sh
+          chmod +x flutter_install.sh
+          ./flutter_install.sh
         working-directory: ${{ github.workspace }}
         env:
           FLUTTER_HOME: ${{ github.workspace }}/flutter
 
       - name: Build APK
-        run: |
-          chmod +x ${{ github.workspace }}/gradlew
-          ${{ github.workspace }}/gradlew assembleDebug
+        run: flutter build apk --debug
         working-directory: ${{ github.workspace }}
 
       - name: Upload APK
         uses: actions/upload-artifact@v2
         with:
           name: app-debug
-          path: app/build/outputs/apk/debug/app-debug.apk
+          path: build/app/outputs/flutter-apk/app-debug.apk
