--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         sudo chmod +x gradlew
         sh gradlew clean
-        sudo sh gradlew assembleRelease
+        ./gradlew assembleRelease
         ls -la app/build/outputs/apk/release/
     - name: Upload the signed APK artifact
       uses: actions/upload-artifact@v2
