--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Build and Sign APK
       run: |
         sudo chmod +x gradlew
-        sh gradlew clean
+        ./gradlew clean
         ./gradlew assembleRelease
         ls -la app/build/outputs/apk/release/
     - name: Upload the signed APK artifact
