--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,13 @@ android {
 
         }
     }
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+        }
+    }
     compileOptions {
         sourceCompatibility 1.8
         targetCompatibility 1.8
